<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:background="@color/primary">

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<LinearLayout
			android:id="@+id/main_container"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal|center_vertical"
			android:paddingLeft="@dimen/activity_horizontal_margin"
			android:paddingRight="@dimen/activity_horizontal_margin"
			android:paddingTop="@dimen/activity_vertical_margin"
			android:paddingBottom="@dimen/activity_vertical_margin"
			android:orientation="vertical"
			android:animateLayoutChanges="true">

			<ImageView
				android:id="@+id/applogo_imageView"
				android:layout_width="match_parent"
				android:layout_height="100dp"
				android:layout_gravity="center"
				android:contentDescription="@string/app_name"
				android:src="@drawable/smash_nude"
				android:scaleType="centerInside"/>

			<LinearLayout
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:orientation="vertical"
				android:id="@+id/signincontainer">

				<LinearLayout
					android:orientation="vertical"
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

					<android.support.design.widget.TextInputLayout
						android:id="@+id/usernameWrapper"
						android:theme="@style/TILWhiteTheme"
						android:layout_width="match_parent"
						android:layout_height="wrap_content">

						<EditText
							android:id="@+id/userNameEditText"
							android:inputType="textPersonName"
							android:hint="@string/username_email_hint"
							android:layout_width="match_parent"
							android:layout_height="50dp"/>

					</android.support.design.widget.TextInputLayout>

					<android.support.design.widget.TextInputLayout
						android:id="@+id/passwordWrapper"
						android:layout_width="match_parent"
						android:theme="@style/TILWhiteTheme"
						android:layout_height="wrap_content">

						<EditText
							android:id="@+id/passwordEditText"
							android:inputType="textPassword"
							android:hint="@string/password_hint"
							android:layout_width="match_parent"
							android:layout_height="50dp"/>

					</android.support.design.widget.TextInputLayout>

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:orientation="vertical"
						android:layout_marginTop="10dp">

						<android.support.v7.widget.AppCompatButton
							android:id="@+id/custom_signin_button"
							android:layout_width="fill_parent"
							android:layout_height="wrap_content"
							android:text="@string/sign_in"
							android:layout_margin="5dp"/>

						<TextView
							android:id="@+id/custom_signup_button"
							android:layout_width="fill_parent"
							android:layout_height="wrap_content"
							android:layout_marginTop="12dp"
							android:text="@string/sign_up"
							android:gravity="center"
							android:textSize="16sp"
							android:clickable="true"/>

					</LinearLayout>

				</LinearLayout>

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="16dp"
					android:layout_marginBottom="16dp"
					android:orientation="horizontal">

					<TextView
						android:layout_gravity="center"
						android:layout_width="0dp"
						android:layout_weight="1"
						android:layout_height="1dp"
						android:background="@color/iron"/>

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginLeft="20dp"
						android:layout_marginRight="20dp"
						android:text="@string/or"
						android:textColor="@color/iron"
						android:textSize="16sp"/>

					<TextView
						android:layout_gravity="center"
						android:layout_width="0dp"
						android:layout_weight="1"
						android:layout_height="1dp"
						android:background="@color/iron"/>

				</LinearLayout>

				<LinearLayout
					android:orientation="vertical"
					android:layout_width="match_parent"
					android:layout_height="match_parent">

					<android.support.v7.widget.AppCompatButton
						android:id="@+id/login_google_button"
						android:layout_width="fill_parent"
						android:layout_height="60dp"
						android:padding="16dp"
						android:layout_marginBottom="10dp"
						android:text="@string/google_login_text"
						android:layout_margin="5dp"/>

				</LinearLayout>

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical"
					android:gravity="center"
					android:layout_weight="1">

					<android.support.v7.widget.AppCompatButton
						android:id="@+id/login_fb_button"
						android:layout_width="fill_parent"
						android:layout_height="60dp"
						android:padding="16dp"
						android:layout_marginBottom="10dp"
						android:text="@string/fb_login_text"
						android:layout_margin="5dp"/>

				</LinearLayout>

			</LinearLayout>

			<LinearLayout
				android:id="@+id/signupcontainer"
				android:orientation="vertical"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:visibility="gone">

				<android.support.design.widget.TextInputLayout
					android:id="@+id/usernameWrapper"
					android:theme="@style/TILWhiteTheme"
					
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

					<EditText
						android:id="@+id/userNameSignUp"
						android:inputType="textPersonName"
						android:hint="@string/username_hint"
						android:layout_width="match_parent"
						android:layout_height="50dp"/>

				</android.support.design.widget.TextInputLayout>

				<android.support.design.widget.TextInputLayout
					android:id="@+id/emailWrapper"
					android:theme="@style/TILWhiteTheme"
					
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

					<EditText
						android:id="@+id/emailSignUp"
						android:inputType="textEmailAddress"
						android:hint="@string/email_hint"
						android:layout_width="match_parent"
						android:layout_height="50dp"/>

				</android.support.design.widget.TextInputLayout>

				<android.support.design.widget.TextInputLayout
					android:id="@+id/passwordWrapper"
					android:layout_width="match_parent"
					android:theme="@style/TILWhiteTheme"
					android:layout_height="wrap_content">

					<EditText
						android:id="@+id/passwordSignUp"
						android:inputType="textPassword"
						android:hint="@string/password_hint"
						android:layout_width="match_parent"
						android:layout_height="50dp"/>

				</android.support.design.widget.TextInputLayout>

				<android.support.design.widget.TextInputLayout
					android:id="@+id/repeatPasswordWrapper"
					android:layout_width="match_parent"
					android:theme="@style/TILWhiteTheme"
					android:layout_height="wrap_content">

					<EditText
						android:id="@+id/repeatPasswordSignUp"
						android:inputType="textPassword"
						android:hint="@string/password_hint"
						android:layout_width="match_parent"
						android:layout_height="50dp"/>

				</android.support.design.widget.TextInputLayout>

				<android.support.v7.widget.AppCompatButton
					android:id="@+id/user_signup_button"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:text="@string/sign_up_button"/>

			</LinearLayout>

		</LinearLayout>

	</ScrollView>

</LinearLayout>

